# ziperu

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: read_entry.rs  read_metadata.rs
examples/: extract.rs  extract_lorem.rs  file_info.rs  stdin_info.rs  write_dir.rs  write_sample.rs
fuzz/fuzz_targets/: fuzz_read.rs
src/: aes.rs  aes_ctr.rs  compression.rs  cp437.rs  crc32.rs  lib.rs  read.rs  result.rs  spec.rs  types.rs  write.rs
src/read/: lzma_reader.rs  stream.rs
src/write/: file_options.rs  generic_writer.rs
tests/: aes_encryption.rs  deflate64.rs  end_to_end.rs  invalid_date.rs  issue_234.rs  lzma.rs  xz.rs  zip64_large.rs  zip_comment_garbage.rs  zip_crypto.rs
tests/data/deflate64/: README.md
