[package]
name = "ziperu"
version = "0.7.0"
authors = [
    "Mathijs van de Nes <git@mathijs.vd-nes.nl>",
    "Marli Frost <marli@frost.red>",
    "Ryan Levick <ryan.levick@gmail.com>",
    "blinxen <h-k-81@hotmail.com>"
]
license = "MIT"
repository = "https://github.com/zip-rs/zip.git"
keywords = ["zip", "archive"]
description = """
Library to support the reading and writing of zip files.
"""
edition = "2024"
rust-version = "1.85.0"

[dependencies]
aes = { version = "0.8.4", optional = true }
byteorder = "1.5.0"
bzip2 = { version = "0.6.0", optional = true }
constant_time_eq = { version = "0.4.2", optional = true }
crc32fast = "1.5.0"
flate2 = { version = "1.1.4", default-features = false, optional = true }
hmac = { version = "0.12.1", optional = true, features = ["reset"] }
indexmap = "2.11.4"
pbkdf2 = {version = "0.12.2", optional = true }
sha1 = {version = "0.10.6", optional = true }
time = { version = "0.3.44", optional = true, default-features = false, features = ["std"] }
zstd = { version = "0.13.3", optional = true }

[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
crossbeam-utils = "0.8.21"

[dev-dependencies]
bencher = "0.1.5"
getrandom = "0.3.3"
walkdir = "2.5.0"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[features]
aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
unreserved = []
default = ["aes-crypto", "bzip2", "deflate", "time", "zstd"]

[[bench]]
name = "read_entry"
harness = false

[[bench]]
name = "read_metadata"
harness = false
